[package]
name = "wgpu-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wgpu = "0.17.0"
winit = "0.28.6"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }